	Wayne Volkmuth (PR#2289021). Crashes with 3-character element.

	* include/openbabel/atom.h: Patch from Wayne Volkmuth to ensure
	atomic numbers are unsigned (i.e., values above 127 are
	OK). PR#2289628.

	* src/formats/pdbformat.cpp: Patch from Francois-Xavier Coudert to
	write CRYST1 records when unit cell data is present. PR#2023510.

2008-11-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/ops/Makefile.am: Build mcdlutil.cpp and
	gen2D.cpp plugin.

	* configure.in: Update to indicate that trunk is not 2.2.0
	build. (May go into a 2.3 or 3.0 build.)

2008-11-12  Chris Morley

	* src/mscdlutil.cpp, data/templates.sdf: revert to previous
	version	with templates internal, since external templates
	did not seem to be always applied.
	#define nRotBondsMax 20 (from 24) which should improve performance.

2008-11-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/pqrformat.cpp: Apply patch from Mikael Lund to read in
	partial charges and radii. The radii are added to the atoms as
	OBPairData with attribute "Radius".

2008-10-31  Chris Morley

	* src/formats/getinchi.cpp: prevent failure when input contains
	"InChI>InChI=...", which actually occurred in an SDF file.

2008-10-27  Chris Morley

	* mcdlutil.cpp: Replace all calls to fabs with abs. 
	Remove internal templates and template molecule sorting; all
	template molecules are now in templates.sdf which has to be sorted,
	largest first.
	
	* data/templates.sdf: 147 molecules, sorted
	
	* obconversion.cpp(Convert): make OutputAtEnd option work with
	multiple input files.

2008-10-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/chains.cpp: Remove debug output.

	* src/forcefields/forcefielduff.cpp: Check if parameters are found and
	don't try to use a NULL pointer when there isn't a parameter. (Fixes:
	#2187870)

2008-10-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefield*.h: Fix MakeNewInstance().
