@@ -10,6 +10,9 @@
 	* src/formats/pdbformat.cpp: Patch from Francois-Xavier Coudert to
 	write CRYST1 records when unit cell data is present. PR#2023510.
 
+	* src/generic.cpp (OBUnitCell::GetLatticeType): Fix bug reported
+	(and patched) by Jonathan Coome.
+
 2008-11-21  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/Makefile.am, src/ops/Makefile.am: Build mcdlutil.cpp and
